# otus_game

./: .appveyor.yml  .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/adapters/: AbstractAdapter.cpp  AbstractAdapter.h  AbstractAdapterPropertys.h  AdapterBurnFuel.cpp  AdapterBurnFuel.h  AdapterCheckFuel.cpp  AdapterCheckFuel.h  AdapterMovable.cpp  AdapterMovable.h  AdapterRotable.cpp  AdapterRotable.h
src/commands/: AbstractAdapter.cpp  AbstractAdapter.h  AbstractCommand.h  AdapterMovable.cpp  AdapterMovable.h  AdapterRotable.cpp  AdapterRotable.h  CommandCheckFuel.cpp  CommandCheckFuel.h  CommandInterrupt.cpp  CommandInterrupt.h  CommandMovable.cpp  CommandMovable.h  CommandRotable.cpp  CommandRotable.h  CommandStop.cpp  CommandStop.h  CommandWorker.cpp  CommandWorker.h
src/objects/: Objects.cpp  Objects.h  Objects_internal.h
src/types/: Angel.cpp  Angel.h  ExceptionError.cpp  ExceptionError.h  Point.cpp  Point.h  Property.h  PropertyError.cpp  PropertyError.h  Property_internal.h  Vector.cpp  Vector.h  VectorVelocity.cpp  VectorVelocity.h  VelocityRotate.cpp  VelocityRotate.h
test/: CMakeLists.txt  tb_main.cpp
